tests/vertical-slice/accept/actor_receive_fn_named_send.hew
// A user-defined `receive fn send` is a first-class handler. `ref.send(n)` must
// dispatch to the handler on a concrete actor handle.
//
// Counter.send accumulates n into count; Counter.get returns count.
// main: send(10) + send(32) = 42 → exit 42.
actor Counter {
    var count: i64;
    receive fn send(n: i64) {
        count = count + n;
    }
    receive fn get() -> i64 {
        count
    }
}

fn main() -> i64 {
    let counter = spawn Counter(count: 0);
    counter.send(10);
    counter.send(32);
    match await counter.get() {
        Ok(v) => v,
        Err(_e) => 0,
    }
}
